--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,10 @@ body {
     opacity: 1;
 }
 
+path.current-floor {
+    opacity: 1;
+}
+
 .main-info {
     flex-grow: 1;
     text-align: center;
