--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,11 @@
 
 @font-face {
     font-family: "Bebas Neue";
-    src: local("BebasNeueRegular"), url("../fonts/BebasNeueRegular.woff2") format("woff2"),
-      url("../fonts/BebasNeueRegular.woff") format("woff");
+    src: local("BebasNeueRegular"), url("../fonts/BebasNeueRegular.woff2") format("woff2"), url("../fonts/BebasNeueRegular.woff") format("woff");
     font-weight: normal;
     font-style: normal;
     font-display: swap;
-  }
+}
   
 
 * {
@@ -129,7 +128,7 @@ path.current-floor {
     margin: 0;
 }
 
-.counter {
+.floor-counter {
     font-family: "Bebas Neue", sans-serif;
     color: #635854;
     font-size: 124px;
@@ -143,5 +142,113 @@ path.current-floor {
     border: none;
     color: #ffffff;
     padding: 16px 36px;
+    cursor: pointer;
+}
+
+.modal {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transform: scale(0);
+    transition: opacity .2s;
+}
+
+.active {
+    opacity: 1;
+    transform: scale(1);
+}
+
+.modal-dialog {
+    position: relative;
+    max-width: 1000px;
+    min-height: 565px;
+    background-color: #ffffff;
+    flex-grow: 1;
+    display: flex;
+    transform: translateY(-10%);
+    transition: transform .2s, opacity .2s;
+    transition-delay: .2s;
+    opacity: 0;
+}
+
+.active > .modal-dialog {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.modal-image {
+    width: 60%;
+    background-color: #ebebeb;
+    text-align: center;
+    padding: 50px;
+}
+
+.flats path {
+    opacity: 0;
+    cursor: pointer;
+}
+
+.flats path:hover {
+    opacity: 1;
+}
+
+.modal-title {
+    font-family: "Bebas Neue", sans-serif;
+    margin-top: 0;
+    margin-bottom: 25px;
+    font-size: 24px;
+    line-height: 29px;  
+    font-weight: 400;
+}
+
+.modal-info {
+    padding: 50px 46px;
+    width: 40%;
+}
+
+.flat-list {
+    padding: 0;
+    list-style: none;
+    margin-top: 55px;
+}
+
+.flat-item {
+    margin-bottom: 10px;
+}
+
+.flat-link {
+    font-size: 16px;
+    line-height: 19px;
+    color: #635854;
+    text-decoration: none;
+}
+
+.flat-link:hover {
+    color: #3596F5;
+    text-decoration: underline;
+}
+
+.modal-alert {
+    font-style: italic;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 19px;
+    color: #635854;
+    margin-top: 56px;
+}
+
+.modal-close-button {
+    position: absolute;
+    right: 27px;
+    top: 38px;
+    border: none;
+    background-color: transparent;
     cursor: pointer;
 }
